# Positronic

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  Update.ps1  force_sync.txt  log.txt  log2.txt  log_bridge.txt  log_bridge_2.txt  log_bridge_3.txt  log_bridge_opt.txt  log_bridge_opt_2.txt  positronic.db  positronic.db-shm  positronic.db-wal
positronic-bridge/: Cargo.toml
positronic-bridge/src/: app.rs  block.rs  completer.rs  cwd.rs  detection.rs  helpers.rs  keyboard.rs  lib.rs  main.rs  messages.rs  renderer.rs  update.rs  util.rs  view_ui.rs
positronic-bridge/src/biolink/: mod.rs
positronic-bridge/src/gfx/: mod.rs  quad.rs  renderer.rs  shapes.wgsl  text.rs
positronic-bridge/src/hardware/: mod.rs
positronic-bridge/src/holodeck/: detect.rs  events.rs  layout.rs  mod.rs  protocol.rs  renderer.rs
positronic-bridge/src/input/: mod.rs
positronic-bridge/src/platform/: mod.rs
positronic-bridge/src/shell/: app.rs  events.rs  layout.rs  mod.rs
positronic-bridge/src/ui/: inputbar.rs  mod.rs  scene.rs  status.rs  terminal.rs
positronic-bridge/src/widgets/: button.rs  image.rs  mod.rs  plot.rs  table.rs
positronic-bridge/tests/: block_tests.rs  builtin_command_tests.rs  cwd_tracking_tests.rs  help_text_tests.rs  helpers_tests.rs  holodeck_tests.rs  input_tests.rs  keyboard_mapping_tests.rs  mod.rs  pager_detection_tests.rs  pillar_tests.rs  regression_iced014_stream_sender.rs  regression_nuclear_tests.rs  regression_sinkext_send.rs  renderer_tests.rs
positronic-core/: Cargo.toml
positronic-core/src/: airlock.rs  builtins.rs  engine.rs  lib.rs  pty_manager.rs  state_machine.rs  watcher.rs
positronic-core/src/blocks/: mod.rs  model.rs  recorder.rs
positronic-core/src/runner/: mod.rs
positronic-core/src/runtime/: mod.rs  parser.rs
positronic-core/src/term/: mod.rs  modes.rs  osc.rs  semantic.rs
positronic-core/src/vault/: mod.rs  schema.rs
positronic-core/tests/: mod.rs
positronic-hive/: Cargo.toml
positronic-hive/src/: lib.rs
positronic-hive/tests/: mod.rs
positronic-io/: Cargo.toml
positronic-io/src/: lib.rs
positronic-io/tests/: mod.rs
positronic-neural/: Cargo.toml
positronic-neural/src/: cortex.rs  lib.rs  privacy.rs
positronic-neural/src/reflex/: mod.rs
positronic-neural/tests/: mod.rs
positronic-script/: Cargo.toml
positronic-script/src/: lib.rs  wasm_host.rs
positronic-script/tests/: mod.rs
