[package]
name = "positronic-bridge"
version = "0.1.0"
edition = "2024"
authors = ["Positronic Team"]
description = "The NPU-accelerated, Rust-native terminal UI."

[[bin]]
name = "positronic-bridge"
path = "src/main.rs"

[dependencies]
# -- UI & Rendering --
# Advanced features enabled for the Holodeck
iced = { version = "0.14.0", features = ["canvas", "image", "svg", "tokio", "debug", "advanced"] }
wgpu = "28.0.0"   # Direct GPU access for custom shaders (Pillar II)

# -- Async Runtime --
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.89"

# -- Internal Crates (The Architecture) --
positronic-core = { path = "../positronic-core" }
positronic-neural = { path = "../positronic-neural" }
positronic-hive = { path = "../positronic-hive" }
positronic-io = { path = "../positronic-io" }
positronic-script = { path = "../positronic-script" }
tokio-stream = "0.1.18"

# -- The Holodeck (Visualization) --
plotters = "0.3.7"
plotters-iced = "0.11.0"
image = { version = "0.25.9", features = ["jpeg", "png", "bmp", "webp"] } # Full format support
svg = "0.18.0"
resvg = "0.47.0" # High-performance SVG rendering

# -- System Integration --
copypasta = "0.10.2" # Cross-platform Clipboard (Essential for a Terminal)
rfd = "0.17.2"       # Native File Dialogs (Save/Open)
notify = "9.0.0-rc.1"     # Filesystem watching for "Environment Watcher"
directories = "6.0.0" # XDG/Config path compliance
font-kit = "0.14.3"   # System font loading

# -- Input & Utils --
crossterm = { version = "0.29.0", features = ["event-stream"] }
which = "8.0.0"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"
quote = "1.0.40"

# -- Performance Profile (The Iron Core) --
[profile.release]
opt-level = 3
lto = "fat"      # Link Time Optimization for max speed
codegen-units = 1 # Slower compile, faster code
panic = "abort"   # Smaller binary, no unwinding
strip = true      # Remove symbols
