[package]
name = "positronic-bridge"
version = "0.3.0"
edition = "2024"
authors = ["Positronic Team"]
description = "The NPU-accelerated, Rust-native terminal UI — winit/wgpu/glyphon rendering stack."

[[bin]]
name = "positronic-bridge"
path = "src/main.rs"

[dependencies]
# ── Rendering Stack (Pillar II) ──────────────────────────────────
winit = "0.31.0-beta.2"
wgpu = "28.0.0"
pollster = "0.4.0"
glyphon = "0.10.0"
bytemuck = { version = "1", features = ["derive"] }

# ── Clipboard ────────────────────────────────────────────────────
arboard = "3.6.1"

# ── Async Runtime ────────────────────────────────────────────────
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"
async-trait = "0.1.89"
tokio-stream = "0.1.18"

# ── Internal Crates (The Architecture) ───────────────────────────
positronic-core = { path = "../positronic-core" }
positronic-neural = { path = "../positronic-neural" }
positronic-hive = { path = "../positronic-hive" }
positronic-io = { path = "../positronic-io" }
positronic-script = { path = "../positronic-script" }

# ── The Holodeck (Visualization) ─────────────────────────────────
plotters = "0.3.7"
image = { version = "0.25.9", features = ["jpeg", "png", "bmp", "webp"] }
svg = "0.18.0"
resvg = "0.47.0"

# ── System Integration ───────────────────────────────────────────
copypasta = "0.10.2"
rfd = "0.17.2"
notify = "9.0.0-rc.2"
directories = "6.0.0"
font-kit = "0.14.3"

# ── Input & Utils ────────────────────────────────────────────────
crossterm = { version = "0.29.0", features = ["event-stream"] }
which = "8.0.0"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"

# ── Performance Profile (The Iron Core) ──────────────────────────
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true