[package]
name = "positronic-core"
version = "0.1.0"
edition = "2024"
authors = ["Doctor Tom"]
description = "The high-stability state machine and PTY backend for the Positronic terminal environment."
license = "MIT"
publish = false

[dependencies]
# --- Internal Crates ---
positronic-neural = { path = "../positronic-neural" }
positronic-script = { path = "../positronic-script" }
positronic-hive = { path = "../positronic-hive" }
positronic-io = { path = "../positronic-io" }

# --- The Terminal Backend ---
alacritty_terminal = "0.24"

# --- PTY Management ---
portable-pty = "0.8"

# --- Async Runtime ---
tokio = { version = "1.36", features = ["sync", "io-util", "rt"] }

# --- Data Handling ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Error Handling ---
anyhow = "1.0"
thiserror = "1.0"

# --- Logging ---
tracing = "0.1"

# --- Utilities ---
bytes = "1.5"
regex = "1.10"

# --- Persistence ---
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }

# --- Filesystem Watching ---
notify = "9.0.0-rc.1"

# --- Cross-Platform Bits ---
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi"] }
