[package]
name = "positronic-core"
version = "0.1.0"
edition = "2024"
authors = ["Doctor Tom"]
description = "The high-stability state machine and PTY backend for the Positronic terminal environment."
license = "MIT"
publish = false

[dependencies]
# --- Internal Crates ---
positronic-neural = { path = "../positronic-neural" }
positronic-script = { path = "../positronic-script" }
positronic-hive = { path = "../positronic-hive" }
positronic-io = { path = "../positronic-io" }

# --- The Terminal Backend ---
alacritty_terminal = "0.25.1"

# --- PTY Management ---
portable-pty = "0.9.0"

# --- Async Runtime ---
tokio = { version = "1.49.0", features = ["sync", "io-util", "rt"] }

# --- Data Handling ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# --- Error Handling ---
anyhow = "1.0.101"
thiserror = "2.0.18"

# --- Logging ---
tracing = "0.1.44"

# --- Utilities ---
bytes = "1.11.1"
regex = "1.12.3"

# --- Persistence ---
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }

# --- Filesystem Watching ---
notify = "9.0.0-rc.1"

# --- Cross-Platform Bits ---
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi"] }
