[package]
name = "positronic-core"
version = "0.1.0"
edition = "2021"
authors = ["Doctor Tom"]
description = "The high-stability state machine and PTY backend for the Positronic terminal environment."
license = "MIT"
publish = false

[dependencies]
# --- Internal Crates ---
positronic-neural = { path = "../positronic-neural" }
positronic-script = { path = "../positronic-script" }
positronic-hive = { path = "../positronic-hive" }
positronic-io = { path = "../positronic-io" }

# --- The Terminal Backend (VT parser and state machine) ---
alacritty_terminal = "0.25.1"

# --- Async Runtime ---
tokio = { version = "1.49.0", features = ["sync", "io-util", "rt", "process", "io-std"] }

# --- Data Handling ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# --- Error Handling ---
anyhow = "1.0.101"
thiserror = "2.0.18"

# --- Logging ---
tracing = "0.1.44"

# --- Utilities ---
bytes = "1.11.1"
regex = "1.12.3"

# --- Persistence ---
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }

# --- Filesystem Watching ---
notify = "9.0.0-rc.1"
nix = "0.31.1"

# ════════════════════════════════════════════════════════════════════
# Platform-Specific PTY Implementation
# ════════════════════════════════════════════════════════════════════

[target.'cfg(windows)'.dependencies]
# Native Windows ConPTY support
conpty = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
# Native Unix PTY support
nix = { version = "0.29", features = ["process", "term"] }
libc = "0.2"
