[package]
name = "positronic-io"
version = "0.1.0"
edition = "2024"
authors = ["Doctor Tom"]
description = "Hardware interface bridge for Positronic."
license = "MIT"
publish = false

[dependencies]
# --- Hardware Interface ---
serialport = "4.2"
tokio = { version = "1.36", features = ["sync", "macros", "rt"] }
anyhow = "1.0"
tracing = "0.1"
