[package]
name = "positronic-io"
version = "0.1.0"
edition = "2024"
authors = ["Doctor Tom"]
description = "Hardware interface bridge for Positronic."
license = "MIT"
publish = false

[dependencies]
# --- Hardware Interface ---
serialport = ">=4.2, <4.8.1"
tokio = { version = "1.49.0", features = ["sync", "macros", "rt"] }
anyhow = "1.0.101"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
