[package]
name = "positronic-neural"
version = "0.1.0"
edition = "2024"
authors = ["Doctor Tom"]
description = "Local NPU client interface for Positronic."
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1.89"
# --- AI Client ---
# The standard OpenAI-compatible client to talk to Lemonade.
async-openai = { version = "0.32", features = ["chat-completion"] }

# --- HTTP Client ---
reqwest = { version = "0.13.2", features = ["json"] }

# --- Data ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
tracing = "0.1.44"

# --- Security ---
# Use regex to scrub sensitive data (API keys, passwords) before sending to NPU.
regex = "1.12.3"
