[package]
name = "positronic-script"
version = "0.1.0"
edition = "2024"
authors = ["Doctor Tom"]
description = "Rust-native scripting runner for Positronic."
license = "MIT"
publish = false

[dependencies]
# --- Script Execution ---
# The engine that compiles and runs single-file Rust scripts.
# The modern, maintained replacement for cargo-script
rust-script = "0.36" 
wasmtime = "41.0.3"

# --- Compilation Caching ---
# Hashes file contents to avoid recompiling unchanged scripts.
sha2 = "0.11.0-rc.5"
hex = "0.4.3"
directories = "6.0.0" # To store the cache in ~/.cache/positronic

# --- System ---
tokio = { version = "1.49.0", features = ["process", "fs"] }
anyhow = "1.0.101"
tempfile = "3.25.0" # For creating temporary cargo projects

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
